--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang='ja'>
-    <head>
+    <head prefix='og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#'>
         <meta charset='utf-8'>
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <meta name='viewport' content='width=device-width,initial-scale=1.0'>
         <link rel='icon' href='<%= BASE_URL %>favicon.ico'>
+
+        <!-- OGP start -->
+        <meta property='og:url' content='' />
+        <meta property='og:type' content='article' />
+        <meta property='og:title' content='' />
+        <meta property='og:description' content='' />
+        <meta property='og:site_name' content='' />
+        <meta property='og:image' content='' />
+        <!-- OGP end -->
 
         <title>App</title>
     </head>
