--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang='ja'>
     <head prefix='og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#'>
-        <meta charset='utf-8'>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <meta name='viewport' content='width=device-width,initial-scale=1.0'>
-        <link rel='icon' href='<%= BASE_URL %>favicon.ico'>
+        <meta charset='utf-8' />
+        <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+        <meta name='viewport' content='width=device-width,initial-scale=1.0' />
+        <link rel='icon' href='<%= BASE_URL %>favicon.ico' />
 
         <!-- OGP start -->
         <meta property='og:url' content='' />
