<master>[modified] description

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <!-- OGP end -->
 
         <title>App</title>
+        <meta name='description' content=''>
     </head>
     <body>
         <noscript>
