<master>[modified] 閉じタグ仕様合わせ

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <!-- OGP end -->
 
         <title>App</title>
-        <meta name='description' content=''>
+        <meta name='description' content='' />
     </head>
     <body>
         <noscript>
